[package]
name = "nginr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boring = "2.1.0"
bytes = "1"
hyper = { version = "1.0.0-rc.3", features = ["full"] }
quiche = { version = "0.16.0", features = ["boring"] }
tide-acme = "0.2.0"
tokio = { version = "1.26.0", features = ["full"] }
http-body = "=1.0.0-rc.2"
http-body-util = { version = "=0.1.0-rc.2" }
